# task_list_bot

./: .gitignore  Dockerfile  README.md  Telega.py  docker-compose.prod.yml  docker-compose.yml  file_callback  file_id  main.py  messages.py  pyproject.toml  statistics
.github/workflows/: push.yml
