[tool.poetry]
name = "task_list_bot"
version = "0.1.0"
description = ""
authors = ["Ignat Balakirev <ivbignal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

